# TopologyAPI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docs.md
TopologyAPI/: CMakeLists.txt
TopologyAPI/include/top/: component.h  component_value.h  nmos.h  resistor.h  topology.h  topology_manager.h
TopologyAPI/src/: component.cpp  nmos.cpp  resistor.cpp  topology.cpp  topology_manager.cpp
TopologyAPITests/: CMakeLists.txt
TopologyAPITests/src/: components_test.cpp  topology_manager_test.cpp  topology_test.cpp
TopologyAPITests/topologies/: given_topology.json  topology_1.json  topology_2.json
